--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
+alembic==1.8.1
 click==8.1.3
 Flask==2.1.3
-Flask-Env==2.0.0
+Flask-Login==0.6.2
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.1
 MarkupSafe==2.1.1
 packaging==21.3
 pip-review==1.1.1
 pyparsing==3.0.9
-python-dotenv==0.20.0
 SQLAlchemy==1.4.39
 Werkzeug==2.2.0
